# smart-note

./: CMakeLists.txt  README.md  main.c
